--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -102,8 +102,8 @@
         </thead>
         <tbody>
         <tr>
-          <th>d</th>
-          <th>d</th>
+          <th>наряд</th>
+          <th>н</th>
         </tr>
         </tbody>
       </table>
