--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -103,7 +103,15 @@
         <tbody>
         <tr>
           <th>наряд</th>
-          <th>н</th>
+          <th style="background-color: #f5f5dc">н</th>
+        </tr>
+        <tr>
+          <th>кол-во пар</th>
+          <th style="background-color: #f5f5dc">4</th>
+        </tr>
+        <tr>
+          <th>выходной</th>
+          <th style="background-color: #faf0e6"></th>
         </tr>
         </tbody>
       </table>
