--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="panel-body">
     <h2>Сменить Email и/или пароль</h2>
 
-    <%= simple_form_for(resource, as: resource_name, url: user_registration_path(resource), html: {method: :put}) do |f| %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f| %>
         <%= f.error_notification %>
 
         <div class="form-inputs">
