--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -20,6 +20,20 @@
     <%= link_to 'Сменить', edit_user_registration_path, class: 'btn btn-success' %>
   </div>
 </div>
+<hr>
+
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title">Пользователи</h3>
+  </div>
+  <div class="panel-body">
+    <h3>Прошли проверку</h3>
+    <%= render partial: 'settings/table', locals: {registered: true} %>
+    <h3>Ожидают проверку</h3>
+    <%= render partial: 'settings/table', locals: {registered: false} %>
+  </div>
+</div>
+
 
 <script type="text/javascript">
     $('#colorpicker').colorpicker()
