--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -17,66 +17,12 @@
   <% end %>
 </ul>
 <hr>
-<!-- Table -->
-<table class="table table-bordered">
-  <thead>
-  <tr>
-    <th>ФИО</th>
-    <% 1.upto @current_date.end_of_month.day do |day| %>
-        <th><%= day %></th>
-    <% end %>
-  </tr>
-  </thead>
-  <tbody>
-  <% @soldiers.each do |s| %>
-      <tr>
-        <th><%= s.surname + ' ' + s.name[0] + '.' + s.patronymic[0] + '.' %></th>
-        <% 1.upto @current_date.end_of_month.day do |day| %>
-            <% current_day = @current_date + day.day - 1 %>
-            <%= state_of_cell(:th, current_day, s.id) %>
-        <% end %>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
+<%= render partial: 'timetables/main_table' %>
 <hr>
 <div class="row">
   <div class="col-lg-9">
     <h3>Статистика за <%= Russian.strftime(@current_date, '%B').mb_chars.downcase %>:</h3>
-    <!-- Table -->
-    <table class="table table-striped ">
-      <thead>
-      <tr>
-        <th>звание & ФИО</th>
-        <th><span style="float: right">Кол-во пар</span></th>
-        <th><span style="float: right; color: red">Кол-во нарядов</span></th>
-        <th><span style="float: right">Нарядов пт-сб</span></th>
-        <th><span style="float: right">Нарядов сб-вс</span></th>
-      </tr>
-      </thead>
-      <tbody>
-      <% soldiers_sort.each do |s| %>
-          <tr>
-            <th>
-              <span style="color: #cfcfcf"><%= Rank.find(s.rank_id).title + ' ' %></span>
-              <%= s.surname + ' ' + s.name[0] + '.' + s.patronymic[0] + '.' %>
-            </th>
-            <th>
-              <span style="float: right"><%= count_lessons(@current_date.beginning_of_month, @current_date.end_of_month, s.id) %></span>
-            </th>
-            <th>
-              <span style="float: right; color: red"><%= count_patrols(@current_date.beginning_of_month, @current_date.end_of_month, s.id) %></span>
-            </th>
-            <th>
-              <span style="float: right"><%= count_patrols_fr_sat(@current_date.beginning_of_month, @current_date.end_of_month, s.id) %></span>
-            </th>
-            <th>
-              <span style="float: right"><%= count_patrols_sat_sun(@current_date.beginning_of_month, @current_date.end_of_month, s.id) %></span>
-            </th>
-          </tr>
-      <% end %>
-      </tbody>
-    </table>
+    <%= render partial: 'timetables/statistics_table' %>
   </div>
   <div class="col-lg-3">
     <div class="well">
@@ -121,7 +67,7 @@
 
 
 
-<div id="dialog" title="Диалоговое окно">
+<div id="dialog" title="Форма ввода">
   <p></p>
 </div>
 
@@ -131,13 +77,41 @@
         function new_handler() {
             var soldier_id = $(this).attr('data-soldier-id');
             var date = $(this).attr('data-date');
-            $("#dialog").load('/timetables/ajax_load_form', {soldier_id: soldier_id, date: date, action_name: 'new'}).dialog();
+            $("#dialog").load('/timetables/ajax_load_form',
+                    {soldier_id: soldier_id, date: date, action_name: 'new'}).dialog(
+                    {
+                        position: {
+                            my: "center",
+                            at: "top",
+                            of: window,
+                            collision: 'fit'
+                        },
+                        modal: true,
+                        show: {
+                            effect: "blind",
+                            duration: 150
+                        }
+                    });
         }
 
         function edit_handler() {
             var soldier_id = $(this).attr('data-soldier-id');
             var date = $(this).attr('data-date');
-            $("#dialog").load('/timetables/ajax_load_form', {soldier_id: soldier_id, date: date, action_name: 'edit'}).dialog();
+            $("#dialog").load('/timetables/ajax_load_form',
+                    {soldier_id: soldier_id, date: date, action_name: 'edit'}).dialog(
+                    {
+                        position: {
+                            my: "center",
+                            at: "top",
+                            of: window,
+                            collision: 'fit'
+                        },
+                        modal: true,
+                        show: {
+                            effect: "blind",
+                            duration: 150
+                        }
+                    });
         }
 
         $('[data-action="n"]').click(new_handler);
