--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -42,8 +42,11 @@
             <%= link_to image_tag('excel.png', size: '60x60'), timetables_path(format: 'xls', year: @current_date.year, month: @current_date.month) %>
           </span>
           </div>
+          <!--<div class="col-lg-6">-->
+            <!--<%=link_to image_tag('print.png', size: '60x60'), timetables_path(format: 'csv', year: @current_date.year, month: @current_date.month) %>-->
+          <!--</div>-->
           <div class="col-lg-6">
-            <%= link_to image_tag('csv.png', size: '60x60'), timetables_path(format: 'csv', year: @current_date.year, month: @current_date.month) %>
+            <%=link_to image_tag('print.png', size: '60x60'), show_table_timetables_path(year: @current_date.year, month: @current_date.month), :target => '_blank' %>
           </div>
         </div>
       </div>
@@ -72,9 +75,10 @@
                         },
                         modal: true,
                         show: {
-                            effect: "blind",
-                            duration: 150
-                        }
+                            effect: "drop",
+                            duration: 250
+                        },
+                        minWidth: 400
                     });
         }
 
@@ -92,9 +96,10 @@
                         },
                         modal: true,
                         show: {
-                            effect: "blind",
-                            duration: 150
-                        }
+                            effect: "drop",
+                            duration: 250
+                        },
+                        minWidth: 400
                     });
         }
 
