added authorize in the timetable controller

--- a/app/views/timetables/_form.html.erb
+++ b/app/views/timetables/_form.html.erb
@@ -37,7 +37,7 @@
               <%= radio_button(:patrol, :kind, 'ф') %>
             </div>
             <div class="radio">
-              <label> наряд по чемто еще</label>
+              <label> наряд по уч. корпусу</label>
               <%= radio_button(:patrol, :kind, 'у') %>
             </div>
           </div>
