--- a/public/403.html.erb
+++ b/public/403.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div style="text-align: center"><%= image_tag('stop.png', size: '245x270') %></div>
       <div class="alert alert-success">
-        <h4 style="text-align: center">Вы прошли регистрацию. Дождитесь пока администратор даст Вас права доступа.</h4>
+        <h4 style="text-align: center">Вы прошли регистрацию. Дождитесь пока администратор даст Вам права доступа.</h4>
       </div>
       <%= link_to('На главную', destroy_user_session_path, :method => 'delete', class: 'btn btn-success') %>
     </div>
