--- a/app/views/layouts/device.html.erb
+++ b/app/views/layouts/device.html.erb
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="page-header">
     <h1>Military Order
-      <small># приложение только для узкого числа лиц </small>
+      <small># закрытое приложение</small>
     </h1>
   </div>
 
