--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -105,5 +105,10 @@
 
         $('[data-action="n"]').click(new_handler);
         $('[data-action="e"]').click(edit_handler);
+//        $('.progress-bar').progressbar({
+//            display_text: 'center',
+//            use_percentage: false,
+//            refresh_speed: 500
+//        });
     });
 </script>
