--- a/app/views/timetables/_statistics_table.html.erb
+++ b/app/views/timetables/_statistics_table.html.erb
@@ -21,9 +21,10 @@
         </th>
         <th>
           <div class="progress progress-striped active">
-            <div class="progress-bar progress-bar-info"
+            <div class="progress-bar progress-bar-info six-sec-ease-in-out"
                  role="progressbar"
                  aria-valuemin="0" aria-valuemax="100"
+                 aria-valuetransitiongoal="100"
                  style="width: <%= get_percents(@current_date.beginning_of_month, @current_date.end_of_month, s.id) %>">
               <span class="sr-only"></span>
             </div>
@@ -56,3 +57,4 @@
   <% end %>
   </tbody>
 </table>
+
