added private link

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,4 +2,4 @@
 @import 'bootstrap-datetimepicker'
 @import 'bootstrap-colorpicker'
 @import 'jquery.ui.all'
-@import "dataurl.css"
+//@import "dataurl.css"
