--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -6,6 +6,7 @@
     <h4>Здесь Вы можете задать цвета, которые отобразятся в таблице.</h4>
     <!--<a href="#" class="btn small" id="colorpicker" data-color-format="hex" data-color="rgb(255, 255, 255)">Change background color</a>-->
     <%= link_to 'Сменить цвет выходных', '#', class: 'btn btn-success', id: 'colorpicker' %>
+    # функция пока недоступна
   </div>
 </div>
 <hr>
