added date exception

--- a/app/views/timetables/_form.html.erb
+++ b/app/views/timetables/_form.html.erb
@@ -19,7 +19,7 @@
 
       <div id="lessons" class="form-group" style="display: none">
         <label>Количество пар:</label>
-        <%= text_field(:lesson, :hours, class: 'form-control', placeholder: 'кол-во пар') %>
+        <%= text_field(:lesson, :hours, class: 'form-control', placeholder: 'только числа от 1 до 9') %>
       </div>
     </div>
 
